Lieu de création inconnu

--- a/materiality89/carte_materiality89.html
+++ b/materiality89/carte_materiality89.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <title>Carte materiality89</title>
+    <title>Carte materiality88-89</title>
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -53,7 +53,6 @@
     <div class="container_map_silder">
         <div id="map"> </div> <!-- Div pour la carte Leaflet -->
     </div>
-
     <!-- Script JavaScript principal pour la carte et les fonctionnalités -->
     <script src="js/materiality89.js"></script>
 </body>
